regles + refacto history